# lakers-backend

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  buildspec.yml  from-book-batch.Dockerfile  pyproject.toml  temp-batch.Dockerfile
config/: settings.py
data_models/: apps.py  models.py
data_models/migrations/: 0001_initial.py  0002_alter_user_email.py  0003_receptionbookimport.py  0003_user_prev_password.py  0004_merge_20230726_1117.py  0005_plan_plantype_alter_user_prev_password_userplan_and_more.py  0006_alter_plan_id_alter_planarea_id_alter_plantype_id_and_more.py  0006_alter_user_prev_password.py  0007_merge_20230807_0857.py  0008_alter_plan_id_alter_planarea_id_alter_plantype_id_and_more.py  0009_realestatereceptionbook_created_at_and_more.py  0009_registrationmap.py  0010_merge_20230818_1619.py  0011_rename_polygon_registrationmap_geometry.py  0012_areausepurposetype_areausepurpose.py  0013_rename_use_purpose_areausepurpose_area_use_purpose_and_more.py  0014_areausepurposeconditions.py  0015_alter_areausepurposeconditions_published_at.py  0016_alter_areausepurpose_prefecture.py  0017_rename_prefecture_areausepurpose_prefecture_city.py  0018_alter_areausepurposetype_area_use_purpose_type_and_more.py  0019_areausepurpose.py  (+23 more)
lakers_backend/: urls.py  views.py
scripts/: _aws_rds_dump.sh  _execute_sql_to_aws_rds.sh  _execute_sql_to_local_db.sh  _local_db_dump.sh  _local_db_restore.sh  _setup_database.sh  _switch_db_setting.sh  丨丨fix_reception_reason.sql
temp_cdk/: app.py  cdk.json  prefectures-sample.json
tests/: conftest.py
(+140 files in other folders)
